--- a/Interviewed/index.html
+++ b/Interviewed/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- 1.github 的评论会报错、2.在github上编辑还是存在问题，使用插件就报错 -->
   <head>
     <meta charset="UTF-8" />
     <title>Document</title>
@@ -47,12 +48,19 @@
           color: 'rgb(90,90,90)',
           language: 'chinese',
         }, //字数统计
+        // plugins: [
+        //   EditOnGithubPlugin.create(
+        //     'https://github.com/Xguihur/carl-list-rush/tree/javascript/Interviewed/'
+        //   ),
+        // ],
       }
     </script>
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
     <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+    <!-- 在github上编辑 -->
+    <!-- <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script> -->
 
     <!-- 集成 gitalk  -->
     <!-- <link
@@ -63,13 +71,11 @@
     <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
     <script>
       const gitalk = new Gitalk({
-        clientID: 'Github Application Client ID',
-        clientSecret: 'Github Application Client Secret',
-        repo: 'Github repo',
-        owner: 'Github repo owner',
-        admin: [
-          'Github repo collaborators, only these guys can initialize github issues',
-        ],
+        clientID: 'a77b4c094e64efaf3fda',
+        clientSecret: '80dc44588565489825b94236d7ebdf5da437bdc4',
+        repo: 'https://github.com/Xguihur/carl-list-rush.git',
+        owner: 'Xguihur',
+        admin: ['Xguihur'],
         // facebook-like distraction free mode
         distractionFreeMode: false,
       })
