完成评论集成功能

--- a/Interviewed/index.html
+++ b/Interviewed/index.html
@@ -3,7 +3,7 @@
   <!-- 1.github 的评论会报错、2.在github上编辑还是存在问题，使用插件就报错 -->
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Guihur 算法文档</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description" />
     <meta
@@ -71,7 +71,7 @@
     <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
 
     <!-- 集成 gitalk  -->
-    <!-- <link
+    <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css"
     />
@@ -81,12 +81,12 @@
       const gitalk = new Gitalk({
         clientID: 'a77b4c094e64efaf3fda',
         clientSecret: '80dc44588565489825b94236d7ebdf5da437bdc4',
-        repo: 'https://github.com/Xguihur/carl-list-rush.git',
+        repo: 'carl-list-rush',
         owner: 'Xguihur',
         admin: ['Xguihur'],
         // facebook-like distraction free mode
-        distractionFreeMode: false,
+        distractionFreeMode: true,
       })
-    </script> -->
+    </script>
   </body>
 </html>
