部署到服务器以及更新任务列表

--- a/Interviewed/index.html
+++ b/Interviewed/index.html
@@ -81,11 +81,14 @@
       const gitalk = new Gitalk({
         clientID: 'a77b4c094e64efaf3fda',
         clientSecret: '80dc44588565489825b94236d7ebdf5da437bdc4',
+        // 服务端
+        // clientID: '9857a62419dcb24cefae',
+        // clientSecret: '7c837383800f233bc4151d20adc87a6585f8a479',
         repo: 'carl-list-rush',
         owner: 'Xguihur',
         admin: ['Xguihur'],
         // facebook-like distraction free mode
-        distractionFreeMode: true,
+        distractionFreeMode: false,
       })
     </script>
   </body>
