--- a/Interviewed/index.html
+++ b/Interviewed/index.html
@@ -14,6 +14,17 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"
     />
+    <style>
+      .mask {
+        width: 0 !important;
+      }
+      .app-nav li > p {
+        /* color: #d40a0a; */
+        background-color: #eee;
+        border-radius: 30px;
+        padding: 5px 8px;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
